--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,5 +37,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Install kivy demo
       run: python -m pip install -e .
+    - name: Installing dummy display
+      run: apt install xvfb
     - name: Test demo
-      run: kivydemo
+      run: xvfb-run kivydemo
