--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Install kivy demo
       run: python -m pip install -e .
     - name: Installing dummy display
-      run: apt install xvfb
+      run: sudo apt install xvfb
     - name: Test demo
       run: xvfb-run kivydemo
