--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,6 +39,5 @@ jobs:
       run: python -m pip install -e .
     - name: Installing dummy display
       run: sudo apt install xvfb
-    - name: Test demo
-      run: xvfb-run kivydemo
-      timeout-minutes: 2
+    - name: Test demo 
+      run: timeout 120 xvfb-run kivydemo || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
