--- a/.github/workflows/kivydemo-workflow.yml
+++ b/.github/workflows/kivydemo-workflow.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: Kivydemo Workflow
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest opencv-python
+        python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -37,7 +37,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Install kivy demo
       run: python -m pip install -e .
-    - name: Installing dummy display
+    - name: Install dummy display # idea thanks to https://arbitrary-but-fixed.net/2022/01/21/headless-gui-github-actions.html 
       run: sudo apt install xvfb
-    - name: Test demo 
-      run: timeout 120 xvfb-run kivydemo || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+    - name: Run demo 
+      run: timeout 60 xvfb-run kivydemo || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+      # if the application run for 1 minutes without any error, then the job is successful 
+      # Better explaination here for how it works https://stackoverflow.com/questions/63641822/run-command-with-timeout-in-github-workflow
