--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,4 +19,9 @@ jobs:
         run: |
           cd doc
           make linkcheck
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./doc/_build/html
           
